hphp/hack/test/typecheck/higher_kinded_types/where_constraints_unsupported.php
<?hh

class Foo<T> {}

function test<T1, T2<TX>>() : void where T2<T1> as Foo<T1>  {

}
